<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/submenu_action_sort_by_name"
                android:title="@string/sort_by_name" />
            <item android:id="@+id/submenu_action_sort_by_date_created"
                android:title="@string/sort_by_creation_date" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_action_hide_completed"
        android:title="@string/hide_completed"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_delete_all_completed"
        android:title="@string/delete_all_completed"
        app:showAsAction="never" />

</menu>