<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_family_atkinson_hyperlegible"
        android:text="@string/to_do_list_app"
        android:textColor="#262627"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"/>

    <TextView
        android:id="@+id/tv_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_app_name"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_family_atkinson_hyperlegible"
        android:gravity="center"
        android:text="@string/get_your_things_done_nanywhere_anytime"
        android:textColor="#262627"
        android:textSize="25sp"
        android:textStyle="normal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in_with_google"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:elevation="3dp"
        android:layout_below="@id/tv_app_description"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/font_family_atkinson_hyperlegible"
        android:text="@string/sign_in_with_google"
        android:textColor="#606060"
        android:textStyle="normal"
        app:icon="@drawable/ic_google_logo"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="25dp"
        app:iconTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in_with_email"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:elevation="3dp"
        android:layout_below="@id/btn_sign_in_with_google"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#EC4639"
        android:fontFamily="@font/font_family_atkinson_hyperlegible"
        android:text="@string/sign_in_with_email"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        app:icon="@drawable/ic_email"
        app:iconGravity="textStart"
        app:iconPadding="20dp"
        app:iconSize="29dp"
        app:iconTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in_skip"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:elevation="3dp"
        android:layout_below="@id/btn_sign_in_with_email"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_family_atkinson_hyperlegible"
        android:text="@string/sign_in_later"
        android:textColor="#156ACF"
        android:textStyle="normal"
        />

</RelativeLayout>